--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Roboto';
 }
 .containers {
   background-color: #229958;
