--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -268,11 +268,17 @@ align-items: center;
     
     
    }
-   .itemm2:hover{
-    background-color: #229958;
-    transition: all 0.8s ease;
+   .itemm2>.readmore_outercasestudies:hover{
+  color: #00011f;
+  
+  transition: all 0.8s ease;
     
    }
+   .itemm2:hover{
+    background-color: #229958;
+    
+   }
+  
    @media (max-width: 613px){
     .itemm2{
     
