--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,6 @@ code {
 background-color: #FFFFF9;
    opacity: 1.0;
    display: flex;
-
    flex-direction: row;
    justify-content: space-between; 
 }
@@ -307,18 +306,22 @@ background-color: #FFFFF9;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #1A1A1D;
+  height: 50vh;
+ 
 }
 
 .chat_container {
-  display: flex;
+  position: absolute;
+
   flex-direction: column;
   justify-content: space-between;
   background: #FFFFFF;
   border-radius: 8px;
-  height: 60%;
-  width: 35%;
+  height: 400px;
+  width: 230px;
+  left: 80%;
+  top:50%
+
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -332,16 +335,12 @@ background-color: #FFFFF9;
   }
 }
 
-@media (min-width: 480px) and (max-width: 1200px) {
-  .chat_container {
-    width: 60%;
-  }
-}
+
 .infoBar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #2979FF;
+  background:#229958;
   border-radius: 4px 4px 0 0;
   height: 60px;
   width: 100%;
@@ -364,6 +363,7 @@ background-color: #FFFFF9;
 
 .onlineIcon {
   margin-right: 5%;
+  width: 50px;
 }
 .outerContainer {
   display: flex;
@@ -383,22 +383,9 @@ background-color: #FFFFF9;
   width: 35%;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-  .outerContainer {
-    height: 100%;
-  }
 
-  .container {
-    width: 100%;
-    height: 100%;
-  }
-}
 
-@media (min-width: 480px) and (max-width: 1200px) {
-  .container {
-    width: 60%;
-  }
-}
+
 form {
   display: flex;
   border-top: 2px solid #D3D3D3;
@@ -408,8 +395,8 @@ form {
   border: none;
   border-radius: 0;
   padding: 5%;
-  width: 80%;
-  font-size: 1.2em;
+  width: 69%;
+  font-size: 1em;
 }
 
 input:focus, textarea:focus, select:focus{
@@ -420,11 +407,12 @@ input:focus, textarea:focus, select:focus{
   color: #fff !important;
   text-transform: uppercase;
   text-decoration: none;
-  background: #2979FF;
+  background: #229958;
   padding: 20px;
   display: inline-block;
   border: none;
-  width: 20%;
+  width: 31%;
+  
 }
 
 .joinOuterContainer {
@@ -512,11 +500,7 @@ button:focus {
   margin-bottom: 0px;
 }
 
-@media (min-width: 320px) and (max-width: 1200px) {
-  .textContainer {
-    display: none;
-  }
-}
+
 
 
 
