--- a/src/ABOUT/About.css
+++ b/src/ABOUT/About.css
@@ -41,8 +41,8 @@
   border-top-right-radius: 22px;
 }
 .about_img2 {
-  width:  40.6vw;
   height: 7vh;
+  width: 82%
 }
 .about_btn {
   font-size: 16px;
@@ -70,7 +70,18 @@
   color: #5f5e5e;
   line-height: 25px;
 }
-
+@media screen and (max-width:1101px)
+{
+  .p_aboutus {
+    font-size: 15px;
+    text-align: justify;
+  
+  }
+  .about_img2 {
+    /* width:  40.2vw;
+    height: 7vh; */
+  }
+}
 @media screen and (max-width: 900px) {
   .about {
     margin-top: 40px;
@@ -86,10 +97,7 @@
     border-top-left-radius: 22px;
     border-top-right-radius: 22px;
 }
-.about_img2 {
-  width: 50vw;
-  height: 5vh;
-}
+
   .aboutus {
     display: flex;
     flex-direction: column;
@@ -120,12 +128,24 @@
     text-align: center;
   }
 }
+@media screen and (max-width:820px){
+  .about_img2 {
+    width: 100%;
+        
+      }
+}
+
+
 @media screen and (max-width: 540px) {
   .H_aboutus {
     font-size: 30px;
     font-family: "roboto";
 
   }
+  .about_img2 {
+    width: 100%;
+        
+      }
   .p_aboutus {
     font-size: 13px;
     text-align: justify;
@@ -170,6 +190,10 @@
   .img_line {
     width: 120px;
   }
+  .about_img2 {
+    width: 100%;
+        
+      }
 }
 @media screen and (max-width: 410px) {
   .H_aboutus {
@@ -195,6 +219,10 @@
   .img_line {
     width: 120px;
   }
+  .about_img2 {
+    width: 100%;
+        
+      }
 }
 
 @media screen and (max-width: 375px) {
@@ -216,6 +244,10 @@
     background-color: #72818b;
     color: white;
     border-radius: 10px;
+  }
+  .about_img2 {
+width: 100%;
+    
   }
 }
 
@@ -240,4 +272,9 @@
     color: white;
     border-radius: 10px;
   }
+  .about_img2 {
+width: 100%;
+  }
 }
+
+
