--- a/src/CaseStudies/CaseStudies.css
+++ b/src/CaseStudies/CaseStudies.css
@@ -482,14 +482,14 @@ align-items: center;
   }
   .img_casestudies_detail{
   margin-top: 20px;
- width: 600px; 
+ width: 800px; 
 
 opacity: 0.8;
+height: 400px;
 
-border-radius: 46px;
+
+border-radius: 31px;
 align-self: center;
-
-
 background: #00011f
   }
   .main_CaseStudies_detail{
@@ -500,8 +500,9 @@ background: #00011f
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding-top: 100px;
+    /* padding-top: 100px; */
     justify-content: center;
+    padding: 50px;
   }
   .p_div{
     display: flex;
@@ -512,11 +513,21 @@ align-self: center;
 font-family: 'roboto';
 font-size: 15px;
   }
-  @media screen and (max-width: 1200px ) {
+  .Case_Studies_detail_inner{
+    width: 65%;
+    align-self: center;
+    padding: 49px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(232, 232, 232);
+    margin-top: 60px;
+  }
+
+  @media screen and (max-width: 1520px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 905px;
-      height:503px;
+     width: 700px;
+      height:400px;
       opacity: 0.8;
       
       border-radius: 46px;
@@ -534,13 +545,22 @@ font-size: 15px;
   font-family: 'roboto';
   font-size:13px ;
     }
+    .Case_Studies_detail_inner{
+      width: 100%;
+      align-self: center;
+      padding: 49px;
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(232, 232, 232);
+      margin-top: 60px;
+    }
 
   }
   @media screen and (max-width: 1078px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 705px;
-      height:503px;
+      width: 550px;
+      height:300px;
       opacity: 0.7;
       
       border-radius: 46px;
@@ -556,16 +576,16 @@ font-size: 15px;
       width:600px;
   align-self: center;
   font-family: 'roboto';
-  font-size:13px ;
+
     }
 
   }
-  @media screen and (max-width: 1078px ) {
+  @media screen and (max-width: 761px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 505px;
-      height:503px;
-      opacity: 0.8;
+      width: 450px;
+      height:250px;
+      opacity: 0.7;
       
       border-radius: 46px;
       align-self: center;
@@ -580,17 +600,62 @@ font-size: 15px;
       width:500px;
   align-self: center;
   font-family: 'roboto';
-  font-size:10px ;
-  
+  font-size: 10px;
+
+    }
+    .Case_Studies_detail_inner{
+      width: 100%;
+      align-self: center;
+     
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(232, 232, 232);
+      margin-top: 60px;
     }
 
+
   }
-  @media screen and (max-width: 569px ) {
+  @media screen and (max-width: 761px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 405px;
-      height:503px;
-      opacity: 0.8;
+      width: 450px;
+      height:250px;
+      opacity: 0.7;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:500px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size: 10px;
+
+    }
+    .Case_Studies_detail_inner{
+      width: 100%;
+      align-self: center;
+     
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(232, 232, 232);
+      margin-top: 60px;
+    }
+
+
+  }
+  @media screen and (max-width: 647px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 350px;
+      height:200px;
+      opacity: 0.7;
       
       border-radius: 46px;
       align-self: center;
@@ -605,16 +670,31 @@ font-size: 15px;
       width:400px;
   align-self: center;
   font-family: 'roboto';
-  font-size:10px ;
+  font-size: 10px;
+
+    }
+    .Case_Studies_detail_inner{
+      width: 100%;
+      align-self: center;
+     
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(232, 232, 232);
+      margin-top: 60px;
     }
 
+
   }
-  @media screen and (max-width: 445px ) {
+
+
+
+
+  @media screen and (max-width: 569px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 305px;
-      height:303px;
-      opacity: 0.8;
+      width: 350px;
+      height:200px;
+      opacity: 0.7;
       
       border-radius: 46px;
       align-self: center;
@@ -633,10 +713,83 @@ font-size: 15px;
     }
 
   }
+  
+  @media screen and (max-width: 541px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 300px;
+      height:200px;
+      opacity: 0.7;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:300px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
+  @media screen and (max-width: 477px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width: 280px;
+      height:200px;
+      opacity: 0.7;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:300px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
+  @media screen and (max-width: 445px ) {
+    .img_casestudies_detail{
+      margin-top: 20px;
+      width:200px;
+      height:200px;
+      opacity: 0.8;
+      
+      border-radius: 46px;
+      align-self: center;
+    }
+    .Case_Studies_detail{
+
+    }
+    .p_div{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width:200px;
+  align-self: center;
+  font-family: 'roboto';
+  font-size:10px ;
+    }
+
+  }
   @media screen and (max-width: 354px ) {
     .img_casestudies_detail{
       margin-top: 20px;
-      width: 205px;
+      width: 170px;
       height:203px;
       opacity: 0.7;
       
